# money-books

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: AGENT.md  MCP.md  PHASE0.md  PHASE7_SYNC.md  PROJECT_NOTES.md  RESEARCH.md  SPEC.md  STARTER_CHART.md  TEST_AUDIT.md
scripts/: fetch_iroh.sh  fetch_webview.sh
src/account/: account.c  account.h
src/agent/: agent.c  agent.h
src/api/: api.c  api.h
src/app/: main.c  platform.h  platform_mac.m  platform_win.c  savepanel.h  savepanel.m
src/bill/: bill.c  bill.h
src/book/: book.c  book.h
src/counterparty/: counterparty.c  counterparty.h
src/export/: export.c  export.h
src/invoice/: invoice.c  invoice.h
src/item/: item.c  item.h
src/journal/: journal.c  journal.h
src/json/: json_vendor.c
src/llm/: llm.c  llm.h
src/mcp/: mcp.c  mcp.h
src/mcpd/: main.c
src/money/: money.c  money.h
src/payment/: payment.c  payment.h
src/redact/: redact.c  redact.h
src/registry/: registry.c  registry.h
src/report/: report.c  report.h
src/secret/: secret.c  secret.h
src/seed/: seed.c  seed.h
src/share/: iroh.h  share.c  share.h  transport.h  transport_iroh.c  transport_loopback.c
src/sharedemo/: main.c
src/sqlite/: sqlite_amalgamation.c
src/store/: store.c  store.h
src/support/: mb_compat.h  mb_error.c  mb_error.h  mb_id.c  mb_id.h  mb_test.h  mb_thread.c  mb_thread.h  mb_win.h  sha256.c  sha256.h
src/test/: mb_test.c  test_main.c
tests/: engine_flow.c  integration_smoke.c  mcp_tools.c  share_protocol.c
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  api.js  readonly.js  styles.css
ui/src/components/: Accounts.jsx  Chat.jsx  Dashboard.jsx  Invoices.jsx  Items.jsx  Launcher.jsx  Record.jsx  Reports.jsx  Settings.jsx  Share.jsx  Transactions.jsx  Wizard.jsx
